<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentTransparent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About QBreaker"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="How it started?"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:textAlignment="center"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Fitting the pieces together"
                    android:layout_marginTop="6dp"
                    android:textSize="16dp"
                    android:textColor="@android:color/holo_orange_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_one"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Finally, QBreaker"
                    android:layout_marginTop="6dp"
                    android:textSize="16dp"
                    android:textColor="@android:color/holo_orange_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_two"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Future Roadmap"
                    android:layout_marginTop="6dp"
                    android:textSize="16dp"
                    android:textColor="@android:color/holo_orange_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_three"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Masterminds Behind QBreaker"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Our Mission"
                    android:layout_marginTop="6dp"
                    android:textSize="16dp"
                    android:textColor="@android:color/holo_orange_dark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_four"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Our Vision"
                    android:layout_marginTop="6dp"
                    android:textSize="16dp"
                    android:textColor="@android:color/holo_orange_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_five"
                    android:textColor="@android:color/black"/>





            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>